--- a/package.json
+++ b/package.json
@@ -2,33 +2,41 @@
   "name": "pwa-vue",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "author": "",
   "scripts": {
     "dev": "webpack-dev-server --progress"
   },
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "material-design-icons-iconfont": "^4.0.5",
+    "vue": "^2.6.8",
+    "vue-router": "^3.0.2",
+    "vuetify": "^1.5.5"
+  },
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^5.0.0",
     "css-loader": "^2.1.0",
+    "event-source-polyfill": "^1.0.5",
     "html-webpack-plugin": "^3.2.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "sw-precache-webpack-plugin": "^0.11.5",
+    "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.8",
+    "vuetify-loader": "^1.0.5",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   },
-  "dependencies": {
-    "vue": "^2.6.8",
-    "vue-router": "^3.0.2"
-  }
+  "license": "ISC",
+  "main": "index.js"
 }
