--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "webpack-dev-server --progress"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "material-design-icons-iconfont": "^4.0.5",
     "vue": "^2.6.8",
     "vue-router": "^3.0.2",
