#ISSUE Installing some dependencies and setting jest to tests

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@storybook/addon-links": "^5.0.1",
     "@storybook/addons": "^5.0.1",
     "@storybook/vue": "^5.0.1",
+    "@vue/babel-preset-app": "^3.5.1",
+    "@vue/cli-service-global": "^3.5.1",
     "axios": "^0.18.0",
+    "babel-preset-vue": "^2.0.2",
     "material-design-icons-iconfont": "^4.0.5",
     "vue": "^2.6.8",
     "vue-design-system": "git+https://github.com/viljamis/vue-design-system",
@@ -21,6 +24,12 @@
     "vuetify": "^1.5.5"
   },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.4.0",
+    "@vue/cli-plugin-eslint": "^3.4.0",
+    "@vue/cli-plugin-unit-jest": "^3.4.0",
+    "@vue/cli-service": "^3.4.0",
+    "@vue/eslint-config-prettier": "^4.0.1",
+    "@vue/test-utils": "^1.0.0-beta.20",
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "babel-loader": "^8.0.5",
@@ -28,6 +37,11 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "vue-template-compiler": "^2.6.8",
     "clean-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^5.0.0",
     "css-loader": "^2.1.0",
@@ -39,7 +53,6 @@
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.8",
     "vuetify-loader": "^1.0.5",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
