--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@storybook/addon-actions": "^5.0.1",
     "@storybook/addon-links": "^5.0.1",
     "@storybook/addons": "^5.0.1",
+    "@storybook/theming": "^5.0.3",
     "@storybook/vue": "^5.0.1",
     "@vue/babel-preset-app": "^3.5.1",
     "@vue/cli-service-global": "^3.5.1",
