--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@storybook/addon-actions": "^5.0.1",
+    "@storybook/addon-knobs": "^5.0.3",
     "@storybook/addon-links": "^5.0.1",
+    "@storybook/addon-notes": "^5.0.3",
     "@storybook/addons": "^5.0.1",
     "@storybook/theming": "^5.0.3",
     "@storybook/vue": "^5.0.1",
