--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@storybook/addon-actions": "^5.0.1",
+    "@storybook/addon-info": "^5.0.5",
     "@storybook/addon-knobs": "^5.0.5",
     "@storybook/addon-links": "^5.0.1",
     "@storybook/addon-notes": "^5.0.3",
+    "@storybook/addon-options": "^5.0.5",
     "@storybook/addons": "^5.0.1",
     "@storybook/theming": "^5.0.3",
     "@storybook/vue": "^5.0.1",
